Changed vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "genesis/optimove",
+    "name": "genesis-global/optimove",
     "description": "Opitmove API Client",
     "type": "library",
     "require": {
